src/pages/Customer/customer.css
.container {
    background-color: white;
}

.Title_callManagement {
    margin-bottom: 16px;
    font-size: var(--font-size-xl, 20px);
    font-style: normal;
    font-weight: 500;
    line-height: 28px;
}

.Input_search {
    margin-bottom: 8px;
}

